# pygmod_C

./: .gitignore  CMakeLists.txt  README.md  run_tests.bat  run_tests.sh
src/: CMakeLists.txt  Factor.cpp  Factor.hpp  Function.hpp  Variable.cpp  Variable.hpp  np_utils.cpp  np_utils.hpp
tests/: CMakeLists.txt  test_factor.cpp  test_nputils.cpp  test_variable.cpp
